integrated the two bounding contexts identity and member

--- a/club-manager-member/pom.xml
+++ b/club-manager-member/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>club-manager-commons</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.jaun.club-manager</groupId>
+            <artifactId>club-manager-identity</artifactId>
+        </dependency>
+
         <!-- 3rd party -->
         <dependency>
             <groupId>com.googlecode.libphonenumber</groupId>
