--- a/club-manager-identity/pom.xml
+++ b/club-manager-identity/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>club-manager-identity</artifactId>
+    <name>club-manager-identity</name>
 
     <packaging>ejb</packaging>
 
