--- a/pom.xml
+++ b/pom.xml
@@ -36,12 +36,25 @@
                 <groupId>org.jaun.club-manager</groupId>
                 <artifactId>club-manager-commons</artifactId>
                 <version>${version}</version>
+                <type>jar</type>
             </dependency>
-            <!-- own dependencies -->
             <dependency>
                 <groupId>org.jaun.club-manager</groupId>
                 <artifactId>club-manager-identity</artifactId>
                 <version>${version}</version>
+                <type>ejb</type>
+            </dependency>
+            <dependency>
+                <groupId>org.jaun.club-manager</groupId>
+                <artifactId>club-manager-member</artifactId>
+                <version>${version}</version>
+                <type>ejb</type>
+            </dependency>
+            <dependency>
+                <groupId>org.jaun.club-manager</groupId>
+                <artifactId>club-manager-member-api</artifactId>
+                <version>${version}</version>
+                <type>war</type>
             </dependency>
 
             <!-- 3rd party -->
@@ -49,6 +62,7 @@
                 <groupId>javax</groupId>
                 <artifactId>javaee-api</artifactId>
                 <version>${javaee-api-version}</version>
+                <scope>provided</scope>
             </dependency>
 
             <dependency>
@@ -102,6 +116,12 @@
                     </configuration>
                 </plugin>
 
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-ear-plugin</artifactId>
+                    <version>2.7</version>
+                </plugin>
+
                 <!-- ejb plugin -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -145,8 +165,7 @@
         <module>club-manager-commons</module>
         <module>club-manager-identity</module>
         <module>club-manager-member</module>
-        <module>club-manager-membership</module>
-        <module>club-manager-api</module>
+        <module>club-manager-member-api</module>
         <module>club-manager-ear</module>
     </modules>
 
