--- a/club-manager-member/pom.xml
+++ b/club-manager-member/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>club-manager-member</artifactId>
     <name>club-manager-member</name>
 
-    <packaging>ejb</packaging>
+    <packaging>jar</packaging>
 
     <dependencies>
 
@@ -25,19 +25,36 @@
         <dependency>
             <groupId>org.jaun.club-manager</groupId>
             <artifactId>club-manager-identity</artifactId>
-            <type>ejb</type>
+            <type>jar</type>
         </dependency>
 
         <!-- 3rd party -->
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jersey</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.googlecode.libphonenumber</groupId>
             <artifactId>libphonenumber</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
