--- a/club-manager-member/pom.xml
+++ b/club-manager-member/pom.xml
@@ -46,6 +46,14 @@
             <groupId>com.googlecode.libphonenumber</groupId>
             <artifactId>libphonenumber</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.msemys</groupId>
+            <artifactId>esjc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
