--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,17 @@
                 <version>8.8.5</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.github.msemys</groupId>
+                <artifactId>esjc</artifactId>
+                <version>2.0.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.8.2</version>
+            </dependency>
 
             <!-- testing stuff -->
             <dependency>
