--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,18 @@
                 <version>2.8.2</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.hazelcast</groupId>
+                <artifactId>hazelcast-all</artifactId>
+                <version>3.9.3</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.hazelcast</groupId>
+                <artifactId>hazelcast-client</artifactId>
+                <version>3.9.3</version>
+            </dependency>
+
             <!-- testing stuff -->
             <dependency>
                 <groupId>junit</groupId>
