rename org.jaun.clubmanager.member package in contact project to org.jaun.clubmanager.contact in order to avoid class name clashes

--- a/membership-projection.json
+++ b/membership-projection.json
@@ -1,4 +1,4 @@
-fromStreams(["$ce-contact", "$ce-membership", "$ce-membershipPeriod"])
+fromStreams(["$ce-contact", "$ce-membership", "$ce-membershipPeriod", "$ce-member"])
     .when({
         $any: function(s, e) {
             linkTo("MembershipProjectionStream", e)
