--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
             </dependency>
             <dependency>
                 <groupId>org.jaun.club-manager</groupId>
+                <artifactId>club-manager-invoice</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jaun.club-manager</groupId>
                 <artifactId>club-manager-springboot-app</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -98,6 +103,12 @@
                 <groupId>com.hazelcast</groupId>
                 <artifactId>hazelcast-client</artifactId>
                 <version>3.9.3</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.iban4j</groupId>
+                <artifactId>iban4j</artifactId>
+                <version>3.2.1</version>
             </dependency>
 
             <!-- testing stuff -->
@@ -179,6 +190,7 @@
         <module>club-manager-identity</module>
         <module>club-manager-contact</module>
         <module>club-manager-member</module>
+        <module>club-manager-invoice</module>
         <module>club-manager-springboot-app</module>
     </modules>
 
