--- a/club-manager-eventstore/pom.xml
+++ b/club-manager-eventstore/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>club-manager-eventstore</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.jaun.club-manager</groupId>
+            <artifactId>club-manager-commons</artifactId>
+        </dependency>
+
         <!-- 3rd party -->
 
         <dependency>
@@ -30,6 +35,11 @@
             <version>2.9.0</version>
             <type>jar</type>
             <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
         </dependency>
 
         <!-- testing stuff -->
