--- a/club-manager-eventstore/pom.xml
+++ b/club-manager-eventstore/pom.xml
@@ -42,6 +42,16 @@
             <artifactId>guava</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+        </dependency>
+
         <!-- testing stuff -->
         <dependency>
             <groupId>junit</groupId>
