--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,18 @@
                 <version>3.2.1</version>
             </dependency>
 
+            <dependency>
+                <groupId>javax.json</groupId>
+                <artifactId>javax.json-api</artifactId>
+                <version>1.1.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.glassfish</groupId>
+                <artifactId>javax.json</artifactId>
+                <version>1.1.2</version>
+            </dependency>
+
             <!-- testing stuff -->
             <dependency>
                 <groupId>junit</groupId>
