--- a/club-manager-member/pom.xml
+++ b/club-manager-member/pom.xml
@@ -16,11 +16,11 @@
 
     <dependencies>
 
-        <dependency>
-            <groupId>org.jaun.club-manager</groupId>
-            <artifactId>club-manager-identity</artifactId>
-            <type>jar</type>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.jaun.club-manager</groupId>-->
+            <!--<artifactId>club-manager-identity</artifactId>-->
+            <!--<type>jar</type>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.jaun.club-manager</groupId>
