--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
             </dependency>
             <dependency>
                 <groupId>org.jaun.club-manager</groupId>
+                <artifactId>club-manager-eventstore</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jaun.club-manager</groupId>
                 <artifactId>club-manager-contact</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -198,8 +203,8 @@
     </pluginRepositories>
 
     <modules>
-        <module>club-manager-eventstore</module>
         <module>club-manager-commons</module>
+        <module>club-manager-eventstore</module>
         <module>club-manager-identity</module>
         <module>club-manager-contact</module>
         <module>club-manager-member</module>
