start implementing xml and json feeds

--- a/club-manager-eventstore/pom.xml
+++ b/club-manager-eventstore/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>javax.json</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.rometools</groupId>
+            <artifactId>rome</artifactId>
+        </dependency>
+
         <!-- testing stuff -->
         <dependency>
             <groupId>junit</groupId>
