--- a/club-manager-eventstore/pom.xml
+++ b/club-manager-eventstore/pom.xml
@@ -47,8 +47,18 @@
         </dependency>
 
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.json</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.msemys</groupId>
+            <artifactId>esjc</artifactId>
         </dependency>
 
         <!-- testing stuff -->
