--- a/club-manager-springboot-app/pom.xml
+++ b/club-manager-springboot-app/pom.xml
@@ -16,11 +16,6 @@
 
     <dependencies>
 
-        <dependency>
-            <groupId>org.jaun.club-manager</groupId>
-            <artifactId>club-manager-commons</artifactId>
-        </dependency>
-
         <!--<dependency>-->
             <!--<groupId>org.jaun.club-manager</groupId>-->
             <!--<artifactId>club-manager-identity</artifactId>-->
@@ -44,6 +39,11 @@
         <dependency>
             <groupId>org.jaun.club-manager</groupId>
             <artifactId>club-manager-eventstore</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jaun.club-manager</groupId>
+            <artifactId>club-manager-eventstore-rest-client</artifactId>
         </dependency>
 
         <!-- 3rd party -->
