--- a/club-manager-commons-ddd-es/pom.xml
+++ b/club-manager-commons-ddd-es/pom.xml
@@ -9,14 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>club-manager-eventstore-rest-client</artifactId>
-    <name>club-manager-eventstore-rest-client</name>
+    <artifactId>club-manager-commons-ddd-es</artifactId>
 
     <packaging>jar</packaging>
 
     <dependencies>
 
-        <!-- project dependencies -->
         <dependency>
             <groupId>org.jaun.club-manager</groupId>
             <artifactId>club-manager-eventstore-iface</artifactId>
@@ -24,8 +22,8 @@
 
         <!-- 3rd party -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jersey</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
 
         <dependency>
@@ -34,36 +32,9 @@
         </dependency>
 
         <dependency>
-            <groupId>javax.json</groupId>
-            <artifactId>javax.json-api</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.glassfish</groupId>
-            <artifactId>javax.json</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>com.github.msemys</groupId>
             <artifactId>esjc</artifactId>
         </dependency>
 
-        <!-- testing stuff -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-        </dependency>
-
     </dependencies>
-
 </project>
