--- a/club-manager-springboot-app/pom.xml
+++ b/club-manager-springboot-app/pom.xml
@@ -21,20 +21,15 @@
             <!--<artifactId>club-manager-identity</artifactId>-->
         <!--</dependency>-->
 
-        <!--<dependency>-->
-            <!--<groupId>org.jaun.club-manager</groupId>-->
-            <!--<artifactId>club-manager-contact</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.jaun.club-manager</groupId>
+            <artifactId>club-manager-contact</artifactId>
+        </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>org.jaun.club-manager</groupId>-->
-            <!--<artifactId>club-manager-member</artifactId>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-            <!--<groupId>org.jaun.club-manager</groupId>-->
-            <!--<artifactId>club-manager-invoice</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.jaun.club-manager</groupId>
+            <artifactId>club-manager-member</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.jaun.club-manager</groupId>
