--- a/pom.xml
+++ b/pom.xml
@@ -106,11 +106,11 @@
                 <version>8.8.5</version>
             </dependency>
 
-            <dependency>
-                <groupId>com.github.msemys</groupId>
-                <artifactId>esjc</artifactId>
-                <version>2.0.0</version>
-            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>com.github.msemys</groupId>-->
+                <!--<artifactId>esjc</artifactId>-->
+                <!--<version>2.0.0</version>-->
+            <!--</dependency>-->
 
             <dependency>
                 <groupId>com.google.code.gson</groupId>
