--- a/club-manager-contact/pom.xml
+++ b/club-manager-contact/pom.xml
@@ -10,7 +10,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>club-manager-contact</artifactId>
-    <name>club-manager-contact</name>
 
     <packaging>jar</packaging>
 
@@ -57,6 +56,10 @@
         <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
         </dependency>
     </dependencies>
 
