--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,12 @@
                 <version>1.1.2</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-csv</artifactId>
+                <version>1.5</version>
+            </dependency>
+
             <!-- testing stuff -->
             <dependency>
                 <groupId>junit</groupId>
