--- a/club-manager-member/pom.xml
+++ b/club-manager-member/pom.xml
@@ -52,7 +52,10 @@
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast-client</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
