--- a/club-manager-member/pom.xml
+++ b/club-manager-member/pom.xml
@@ -36,10 +36,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>com.github.msemys</groupId>
             <artifactId>esjc</artifactId>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
