--- a/club-manager-commons-projection/pom.xml
+++ b/club-manager-commons-projection/pom.xml
@@ -36,10 +36,10 @@
             <artifactId>guava</artifactId>
         </dependency>
 
-        <dependency>
+        <!--dependency>
             <groupId>com.github.msemys</groupId>
             <artifactId>esjc</artifactId>
-        </dependency>
+        </dependency-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
